native/signal_ffi.h


typedef const int8_t* SignalCStringPtr;

typedef struct {
 const uint8_t* base;
 size_t length;
} SignalBorrowedBuffer;

typedef struct {
 const SignalProtocolAddress* raw;
} SignalConstPointerProtocolAddress;

typedef struct {
 const SignalPublicKey* raw;
} SignalConstPointerPublicKey;

typedef struct {
 uint8_t* base;
 size_t length;
} SignalOwnedBuffer;

typedef struct {
 SignalPublicKey* raw;
} SignalMutPointerPublicKey;

typedef struct SignalFfiError SignalFfiError;

typedef struct {
 SignalProtocolAddress* raw;
} SignalMutPointerProtocolAddress;

typedef struct {
 SignalPrivateKey* raw;
} SignalMutPointerPrivateKey;

typedef struct {
 SignalKyberPreKeyRecord* raw;
} SignalMutPointerKyberPreKeyRecord;

typedef struct {
 SignalPreKeyRecord* raw;
} SignalMutPointerPreKeyRecord;

typedef struct {
 SignalSessionRecord* raw;
} SignalMutPointerSessionRecord;

typedef struct {
 SignalSignedPreKeyRecord* raw;
} SignalMutPointerSignedPreKeyRecord;

typedef struct {
 SignalKyberPublicKey* raw;
} SignalMutPointerKyberPublicKey;

typedef struct {
 SignalKyberKeyPair* raw;
} SignalMutPointerKyberKeyPair;

typedef struct {
 const SignalPrivateKey* raw;
} SignalConstPointerPrivateKey;

typedef struct {
 const SignalKyberPublicKey* raw;
} SignalConstPointerKyberPublicKey;

typedef struct {
 const SignalKyberKeyPair* raw;
} SignalConstPointerKyberKeyPair;

typedef struct {
 const SignalKyberPreKeyRecord* raw;
} SignalConstPointerKyberPreKeyRecord;

typedef struct {
 const SignalPreKeyRecord* raw;
} SignalConstPointerPreKeyRecord;

typedef struct {
 const SignalSignedPreKeyRecord* raw;
} SignalConstPointerSignedPreKeyRecord;

SignalFfiError* signal_address_destroy(
 SignalMutPointerProtocolAddress p
);

SignalFfiError* signal_address_get_device_id(
 uint32_t* out,
 SignalConstPointerProtocolAddress obj
);

SignalFfiError* signal_address_get_name(
 SignalCStringPtr* out,
 SignalConstPointerProtocolAddress obj
);

SignalFfiError* signal_address_new(
 SignalMutPointerProtocolAddress* out,
 const int8_t* name,
 uint32_t device_id
);

void signal_error_free(
 SignalFfiError* err
);

SignalFfiError* signal_error_get_message(
 SignalCStringPtr* out,
 const SignalFfiError* err
);

uint32_t signal_error_get_type(
 const SignalFfiError* err
);

void signal_free_buffer(
 const uint8_t* buf,
 size_t buf_len
);

void signal_free_string(
 const int8_t* buf
);

SignalFfiError* signal_kyber_key_pair_destroy(
 SignalMutPointerKyberKeyPair p
);

SignalFfiError* signal_kyber_key_pair_generate(
 SignalMutPointerKyberKeyPair* out
);

SignalFfiError* signal_kyber_key_pair_get_public_key(
 SignalMutPointerKyberPublicKey* out,
 SignalConstPointerKyberKeyPair key_pair
);

SignalFfiError* signal_kyber_pre_key_record_clone(
 SignalMutPointerKyberPreKeyRecord* new_obj,
 SignalConstPointerKyberPreKeyRecord obj
);

SignalFfiError* signal_kyber_pre_key_record_deserialize(
 SignalMutPointerKyberPreKeyRecord* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_kyber_pre_key_record_destroy(
 SignalMutPointerKyberPreKeyRecord p
);

SignalFfiError* signal_kyber_pre_key_record_get_public_key(
 SignalMutPointerKyberPublicKey* out,
 SignalConstPointerKyberPreKeyRecord obj
);

SignalFfiError* signal_kyber_pre_key_record_get_signature(
 SignalOwnedBuffer* out,
 SignalConstPointerKyberPreKeyRecord obj
);

SignalFfiError* signal_kyber_pre_key_record_new(
 SignalMutPointerKyberPreKeyRecord* out,
 uint32_t id,
 uint64_t timestamp,
 SignalConstPointerKyberKeyPair key_pair,
 SignalBorrowedBuffer signature
);

SignalFfiError* signal_kyber_pre_key_record_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerKyberPreKeyRecord obj
);

SignalFfiError* signal_kyber_public_key_deserialize(
 SignalMutPointerKyberPublicKey* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_kyber_public_key_destroy(
 SignalMutPointerKyberPublicKey p
);

SignalFfiError* signal_kyber_public_key_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerKyberPublicKey obj
);

SignalFfiError* signal_pre_key_record_clone(
 SignalMutPointerPreKeyRecord* new_obj,
 SignalConstPointerPreKeyRecord obj
);

SignalFfiError* signal_pre_key_record_deserialize(
 SignalMutPointerPreKeyRecord* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_pre_key_record_destroy(
 SignalMutPointerPreKeyRecord p
);

SignalFfiError* signal_pre_key_record_get_public_key(
 SignalMutPointerPublicKey* out,
 SignalConstPointerPreKeyRecord obj
);

SignalFfiError* signal_pre_key_record_new(
 SignalMutPointerPreKeyRecord* out,
 uint32_t id,
 SignalConstPointerPublicKey pub_key,
 SignalConstPointerPrivateKey priv_key
);

SignalFfiError* signal_pre_key_record_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerPreKeyRecord obj
);

SignalFfiError* signal_privatekey_clone(
 SignalMutPointerPrivateKey* new_obj,
 SignalConstPointerPrivateKey obj
);

SignalFfiError* signal_privatekey_deserialize(
 SignalMutPointerPrivateKey* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_privatekey_destroy(
 SignalMutPointerPrivateKey p
);

SignalFfiError* signal_privatekey_generate(
 SignalMutPointerPrivateKey* out
);

SignalFfiError* signal_privatekey_get_public_key(
 SignalMutPointerPublicKey* out,
 SignalConstPointerPrivateKey k
);

SignalFfiError* signal_privatekey_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerPrivateKey obj
);

SignalFfiError* signal_privatekey_sign(
 SignalOwnedBuffer* out,
 SignalConstPointerPrivateKey key,
 SignalBorrowedBuffer message
);

SignalFfiError* signal_publickey_clone(
 SignalMutPointerPublicKey* new_obj,
 SignalConstPointerPublicKey obj
);

SignalFfiError* signal_publickey_deserialize(
 SignalMutPointerPublicKey* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_publickey_destroy(
 SignalMutPointerPublicKey p
);

SignalFfiError* signal_publickey_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerPublicKey obj
);

SignalFfiError* signal_session_record_deserialize(
 SignalMutPointerSessionRecord* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_signed_pre_key_record_clone(
 SignalMutPointerSignedPreKeyRecord* new_obj,
 SignalConstPointerSignedPreKeyRecord obj
);

SignalFfiError* signal_signed_pre_key_record_deserialize(
 SignalMutPointerSignedPreKeyRecord* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_signed_pre_key_record_destroy(
 SignalMutPointerSignedPreKeyRecord p
);

SignalFfiError* signal_signed_pre_key_record_get_public_key(
 SignalMutPointerPublicKey* out,
 SignalConstPointerSignedPreKeyRecord obj
);

SignalFfiError* signal_signed_pre_key_record_get_signature(
 SignalOwnedBuffer* out,
 SignalConstPointerSignedPreKeyRecord obj
);

SignalFfiError* signal_signed_pre_key_record_new(
 SignalMutPointerSignedPreKeyRecord* out,
 uint32_t id,
 uint64_t timestamp,
 SignalConstPointerPublicKey pub_key,
 SignalConstPointerPrivateKey priv_key,
 SignalBorrowedBuffer signature
);

SignalFfiError* signal_signed_pre_key_record_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerSignedPreKeyRecord obj
);