SignalCpf.LibSignal/Native/LibSignalNative.cs

using System.Runtime.InteropServices;

namespace SignalCpf.LibSignal.Native;

/// <summary>
/// P/Invoke surface for libsignal_ffi (aligned with signal_ffi.h / Signal-iOS bridge).
/// Place signal_ffi.dll / libsignal_ffi.so / libsignal_ffi.dylib next to the app binary.
/// </summary>
public static class LibSignalNative
{
    public const string LibraryName = "signal_ffi";

    public static bool IsAvailable { get; } = Probe();

    private static bool Probe()
    {
        try
        {
            return NativeLibrary.TryLoad(LibraryName, typeof(LibSignalNative).Assembly, null, out _)
                   || NativeLibrary.TryLoad("libsignal_ffi", typeof(LibSignalNative).Assembly, null, out _);
        }
        catch
        {
            return false;
        }
    }

    // --- Error / buffer ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_error_free")]
    public static extern void ErrorFree(IntPtr error);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_error_get_message")]
    public static extern IntPtr ErrorGetMessage(out IntPtr outMessage, IntPtr error);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_error_get_type")]
    public static extern uint ErrorGetType(IntPtr error);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_free_string")]
    public static extern void FreeString(IntPtr s);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_free_buffer")]
    public static extern void FreeBuffer(IntPtr buf, nuint bufLen);

    // --- Protocol address ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_address_new")]
    public static extern IntPtr AddressNew(out SignalMutPointer outAddr, IntPtr nameUtf8, uint deviceId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_address_destroy")]
    public static extern IntPtr AddressDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_address_get_name")]
    public static extern IntPtr AddressGetName(out IntPtr outName, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_address_get_device_id")]
    public static extern IntPtr AddressGetDeviceId(out uint outId, SignalConstPointer obj);

    // --- Keys ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_generate")]
    public static extern IntPtr PrivateKeyGenerate(out SignalMutPointer outKey);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_deserialize")]
    public static extern IntPtr PrivateKeyDeserialize(out SignalMutPointer outKey, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_destroy")]
    public static extern IntPtr PrivateKeyDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_serialize")]
    public static extern IntPtr PrivateKeySerialize(out SignalOwnedBuffer outBuf, SignalConstPointer key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_get_public_key")]
    public static extern IntPtr PrivateKeyGetPublicKey(out SignalMutPointer outPub, SignalConstPointer key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_sign")]
    public static extern IntPtr PrivateKeySign(out SignalOwnedBuffer outBuf, SignalConstPointer key, SignalBorrowedBuffer message);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_publickey_deserialize")]
    public static extern IntPtr PublicKeyDeserialize(out SignalMutPointer outKey, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_publickey_destroy")]
    public static extern IntPtr PublicKeyDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_publickey_serialize")]
    public static extern IntPtr PublicKeySerialize(out SignalOwnedBuffer outBuf, SignalConstPointer key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_publickey_clone")]
    public static extern IntPtr PublicKeyClone(out SignalMutPointer outKey, SignalConstPointer key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_privatekey_clone")]
    public static extern IntPtr PrivateKeyClone(out SignalMutPointer outKey, SignalConstPointer key);

    // --- Kyber ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_key_pair_generate")]
    public static extern IntPtr KyberKeyPairGenerate(out SignalMutPointer outPair);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_key_pair_destroy")]
    public static extern IntPtr KyberKeyPairDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_key_pair_get_public_key")]
    public static extern IntPtr KyberKeyPairGetPublicKey(out SignalMutPointer outPub, SignalConstPointer pair);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_public_key_serialize")]
    public static extern IntPtr KyberPublicKeySerialize(out SignalOwnedBuffer outBuf, SignalConstPointer key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_public_key_deserialize")]
    public static extern IntPtr KyberPublicKeyDeserialize(out SignalMutPointer outKey, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_public_key_destroy")]
    public static extern IntPtr KyberPublicKeyDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_new")]
    public static extern IntPtr KyberPreKeyRecordNew(
        out SignalMutPointer outRec,
        uint id,
        ulong timestamp,
        SignalConstPointer keyPair,
        SignalBorrowedBuffer signature);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_serialize")]
    public static extern IntPtr KyberPreKeyRecordSerialize(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_deserialize")]
    public static extern IntPtr KyberPreKeyRecordDeserialize(out SignalMutPointer outRec, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_destroy")]
    public static extern IntPtr KyberPreKeyRecordDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_get_public_key")]
    public static extern IntPtr KyberPreKeyRecordGetPublicKey(out SignalMutPointer outPub, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_get_signature")]
    public static extern IntPtr KyberPreKeyRecordGetSignature(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_kyber_pre_key_record_clone")]
    public static extern IntPtr KyberPreKeyRecordClone(out SignalMutPointer outRec, SignalConstPointer obj);

    // --- PreKey / SignedPreKey records ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_record_new")]
    public static extern IntPtr PreKeyRecordNew(
        out SignalMutPointer outRec,
        uint id,
        SignalConstPointer pubKey,
        SignalConstPointer privKey);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_record_serialize")]
    public static extern IntPtr PreKeyRecordSerialize(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_record_deserialize")]
    public static extern IntPtr PreKeyRecordDeserialize(out SignalMutPointer outRec, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_record_destroy")]
    public static extern IntPtr PreKeyRecordDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_record_clone")]
    public static extern IntPtr PreKeyRecordClone(out SignalMutPointer outRec, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_record_get_public_key")]
    public static extern IntPtr PreKeyRecordGetPublicKey(out SignalMutPointer outPub, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_new")]
    public static extern IntPtr SignedPreKeyRecordNew(
        out SignalMutPointer outRec,
        uint id,
        ulong timestamp,
        SignalConstPointer pubKey,
        SignalConstPointer privKey,
        SignalBorrowedBuffer signature);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_serialize")]
    public static extern IntPtr SignedPreKeyRecordSerialize(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_deserialize")]
    public static extern IntPtr SignedPreKeyRecordDeserialize(out SignalMutPointer outRec, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_destroy")]
    public static extern IntPtr SignedPreKeyRecordDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_clone")]
    public static extern IntPtr SignedPreKeyRecordClone(out SignalMutPointer outRec, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_get_public_key")]
    public static extern IntPtr SignedPreKeyRecordGetPublicKey(out SignalMutPointer outPub, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_signed_pre_key_record_get_signature")]
    public static extern IntPtr SignedPreKeyRecordGetSignature(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    // --- Session / PreKeyBundle / Cipher ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_session_record_deserialize")]
    public static extern IntPtr SessionRecordDeserialize(out SignalMutPointer outRec, SignalBorrowedBuffer data);
